# wager

./: .dockerignore  .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  Anchor.toml  BETA_KNOWN_LIMITATIONS.md  CLAUDE.md  Cargo.toml  DEMO_SCRIPT.md  DEVNET_SMOKE_TEST.md  Dockerfile  HOSTED_BETA_REPORT.md  LICENSE  PRIVATE_BETA.md  PRIVATE_TESTER_GUIDE.md  README.md  SECURITY_REVIEW.md  TOOLCHAIN.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
docs/: DEVNET_VALIDATION.md  KNOWN_LIMITATIONS.md
prisma/: schema.prisma
programs/wager_escrow/: Cargo.toml
programs/wager_escrow/src/: errors.rs  lib.rs  state.rs
programs/wager_escrow/src/instructions/: accept_bet.rs  admin_finalize.rs  cancel_unaccepted.rs  dispute_result.rs  finalize_after_dispute.rs  fund_maker.rs  initialize_bet.rs  mod.rs  propose_result.rs  refund_expired.rs
scripts/: check-hardcoded-secrets.mjs  devnet-smoke-test.sh  e2e-devnet.sh  fix-inconsistent-bet.mjs  fresh-e2e-onchain.mjs  generate-idl.mjs  hosted-e2e.mjs  hosted-e2e.ts  pin-deps.sh
tests/: account-layout.test.ts  adversarial.test.ts  auth.test.ts  borsh-builders.test.ts  challenger-trigger.test.ts  crypto-resolver.test.ts  fees.test.ts  idl-verification.test.ts  normalize-complement.test.ts  normalize-guards.test.ts  normalize-rejected-ui.test.ts  normalize-ux.test.ts  rate-limit.test.ts  reconciliation.test.ts  resolver-validation.test.ts  resolver.test.ts  settle.test.ts  solana.test.ts  transactions.test.ts  utils.test.ts  validators.test.ts  (+1 more)
(+62 files in other folders)
