[workspace]
members = [
    "programs/wager_escrow"
]
resolver = "2"

[workspace.dependencies]
# Pin transitive deps that would otherwise resolve to edition2024 versions
# incompatible with the Solana BPF toolchain's bundled Cargo
block-buffer = "=0.10.4"
crypto-common = "=0.1.6"
digest = "=0.10.7"
cpufeatures = "=0.2.16"
sha2 = "=0.10.8"
sha3 = "=0.10.8"
generic-array = "=0.14.7"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
