[package]
name = "wager-escrow"
version = "0.1.0"
description = "P2P wager escrow program for Solana devnet"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wager_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
